--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Elrebelde1/-Botbarboza-ai.git"
+        "url": "git+"
     },
     "bugs": {
         "url":
@@ -44,7 +44,7 @@
         "@bochilteam/scraper": "^4.2.4",
         "@kaviaann/scrape": "^1.0.1",
         "@vitalets/google-translate-api": "^9.2.0",
-        "@whiskeysockets/baileys": "^6.7.5",
+        "@whiskeysockets/baileys": "github:ds6/bails",
         "@xct007/frieren-scraper": "^0.0.2",
         "google-libphonenumber": "latest",
         "acrcloud": "^1.4.0",
