--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Barboza",
+  "name": "Bolillo",
   "version": "2.2.0",
   "description": "Super WhatsApp Bot Multi Device",
   "main": "index.js",
@@ -18,16 +18,16 @@
     "eslint": "eslint .",
     "eslintfix": "eslint --fix ."
   },
-  "homepage": "https://github.com/Elrebelde1/BarbozaBot-Ai.git",
+  "homepage": "https://github.com/meldexzz/bolibotmensual.git",
   "author": {
-    "name": "Barboza"
+    "name": "meldexzz"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Elrebelde1/BarbozaBot-Ai.git"
+    "url": "https://github.com/meldexzz/bolibotmensual.git"
   },
   "bugs": {
-    "url": "https://github.com/Elrebelde1/BarbozaBot-Ai.git"
+    "url": "https://github.com/meldexzz/bolibotmensual.git"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
@@ -95,8 +95,7 @@
     "megajs": "^1.1.3",
     "mime-types": "^2.1.35",
     "api-dylux": "^1.7.2",
-    "yargs": "^17.3.1",
-    "p-limit": "^6.2.0"
+    "yargs": "^17.3.1"
   },
   "optionalDependencies": {
     "wa-sticker-formatter": "^4.3.2",
